2009-11-06

	* src/plugin.c
	  src/main.c:
	  syl_plugin_add_menuitem()
	  syl_plugin_add_factory_item(): added <IMAPFolder> and <NewsFolder>
	  to parent factory.

2009-11-06

	* configure.in: increased LT_CURRENT because the interface is not
	  completely compatible.

2009-11-05

	* libsylph/folder.[ch]
	  libsylph/news.c
	  libsylph/imap.c: add a new flag:
	  RemoteFolder::remove_cache_on_destroy. If this is not set, caches
	  will not be removed on folder_destroy().
	* libsylph/utils.c: remove_dir_recursive(): added debug print.

2009-11-05

	* libsylph/imap.c: imap_create_tree(): return error if
	  imap_scan_tree() failed.
	* src/account_dialog.c: show waiting dialog on creating folder tree.
	* src/folderview.c: disable close button of waiting dialog.

2009-11-05

	* libsylph/imap.c: imap_create_tree(): don't continue if connection
	  failed.
	* libsylph/socket.c: don't use alarm() if threads are enabled.
	  sock_connect_with_timeout(): check with FD_ISSET() when select()
	  succeeded.

2009-11-04

	* libsylph/socket.c: sock_connect_with_timeout(): use non-blocking
	  socket and select() for connection timeout (fix crash on connection
	  failure).

2009-11-04

	* libsylph/imap.c
	  src/query_search.c
	  src/main.c: fixed a bug that prohibited query search on IMAP
	  folders. Don't call gtk_main_iteration() from non-main threads.

2009-11-02

	* src/summaryview.c: summary_selection_changed(): fixed unintended
	  drag start on IMAP.
2009-11-02

	* libsylph/utils.[ch]
	  libsylph/mh.c
	  libsylph/procmsg.c
	  libsylph/news.c: more fix for UID more than INT_MAX.

2009-11-02

	* libsylph/imap.[ch]
	  src/summaryview.c: don't allow parallel multiple command on IMAP.

2009-10-29

	* src/update_check.c: fixed freeze bug on showing dialog.

2009-10-29

	* version 3.0.0beta1

2009-10-29

	* libsylph/libsylph-0.def
	  src/libsylpheed-plugin-0.def: updated.

2009-10-29

	* src/addressbook.c: modified the design.

2009-10-29
